update java 17 to java 21